--- a/towerofhanoi/html/index.html
+++ b/towerofhanoi/html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tic Tac Toe</title>
+    <title>Towers of Hanoi</title>
     <link rel="stylesheet" type="text/css" href="../css/tower.css">
   </head>
   <body>
