--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Towers of Hanoi</title>
-    <link rel="stylesheet" type="text/css" href="../css/tower.css">
+    <link rel="stylesheet" type="text/css" href="./css/tower.css">
   </head>
   <body>
-    <script src="../js/jquery-2.1.1.js"></script>
+    <script src="./js/jquery-2.1.1.js"></script>
     <!-- Whackjobs at GithubPages don't understand symlinks... -->
-    <script src="../js/tower.js"></script>
-    <script src="../js/hanoi-view.js"></script>
+    <script src="./js/tower.js"></script>
+    <script src="./js/hanoi-view.js"></script>
     <div id="game">
     </div>
     <script>
